--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,4 +13,10 @@
 <!--        <url-pattern>/first</url-pattern>-->
 <!--    </servlet-mapping>-->
 
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+<!--        <error-code>500</error-code>-->
+        <location>/WEB-INF/jsp/500.jsp</location>
+    </error-page>
+
 </web-app>
